# ktt-space-devices

./: .env.example  .gitignore  Cargo.toml
src/: main.rs  mqtt_service.rs  storage_service.rs
src/web_service/: mod.rs  web_server_paths.rs
templates/: index.html.hbs
