[package]
name = "space-devices"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
dotenv = "0.15.0"
reqwest = "0.11.14"
rumqttc = { version = "0.20.0", features = ["use-native-tls", "url"] }
tokio = { version = "1.26.0", features = ["full"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"